--- a/app/views/projections/stats_by_game.html.erb
+++ b/app/views/projections/stats_by_game.html.erb
@@ -14,7 +14,7 @@
     <% @games_played.each do |gp| %>
       <tr>
         <td><%= gp.player.name %></td>
-        <td><%= gp.game.start_date.in_est %></td>
+        <td><%= gp.game.start_date.in_time_zone("EST") %></td>
         <% player_stats = Projection::Stat.where(player: gp.player, game: gp.game).all %>
         <% stats.map {|s| lookup_stat(player_stats, gp.game.stats_event_id, gp.player, s)}.each do |stat| %>
           <% if stat %>
