--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,4 +1,4 @@
-<div class="capitalcontent gamecenter">
+<div ng-app="fantasysport" ng-controller="GameCenterCtrl" ng-init="gc_init(<%= @entry_id %>)" class="capitalcontent gamecenter">
 <!--Login Section-->
 
 <ul class="list-inline title">
@@ -293,7 +293,7 @@
     <h2 class="panelHeading">831</h2>
   </div>
   <div class="col-md-8 panelTwo">
-    <p class="user"><%= image_tag "user.png" %> <span class="green">julius100</span></p>
+    <p class="user"><%= image_tag "user.png" %> <span class="green">{{my.username}}</span></p>
 
     <div class="clearfix"></div>
     <p class="quarters"> 6 Quarters Remaining
@@ -302,33 +302,35 @@
   </div>
   <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
 
-    <h2 class="panelHeading">270.2</h2>
+    <h2 class="panelHeading">{{my_total_score}}</h2>
   </div>
   <div class="clearfix"></div>
   <!--Score Card-->
-  <div class="scorecard2">
-    <table class="scorecardTable" cellpadding="10" cellspacing="10">
-      <tbody>
-      <tr>
-        <td><h1 class="role">PG</h1></td>
-        <td><strong>Damian Lillard</strong>
+  <div ng-repeat="lineup_spot in lineup_spots">
+    <div class="scorecard2">
+      <table class="scorecardTable" cellpadding="10" cellspacing="10">
+        <tbody>
+        <tr>
+          <td><h1 class="role">{{lineup_spot.sport_position.name}}</h1></td>
+          <td><strong>{{lineup_spot.player.first_name}} {{lineup_spot.player.last_name}}</strong>
 
-          <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-            36 P, 6 R, 6 A, 3 S, 1 B</p>
-        </td>
-        <td>
-          $79 <br>
-          SALARY
-        </td>
-        <td>27.5% <br>
-          OWNED
-        </td>
-        <td><h1>57.2</h1></td>
-      </tr>
-      </tbody>
-    </table>
+            <p class="por"><strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
+              36 P, 6 R, 6 A, 3 S, 1 B</p>
+          </td>
+          <td>
+            ${{lineup_spot.player.salary}} <br>
+            SALARY
+          </td>
+          <td>27.5% <br>
+            OWNED
+          </td>
+          <td><h1>{{lineup_spot.score}}</h1></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <div class="clearfix"></div>
+  <!--<div class="clearfix"></div>
   <div class="scorecard2 white">
     <table class="scorecardTable" cellpadding="10" cellspacing="10">
       <tbody>
@@ -535,7 +537,7 @@
       </tbody>
     </table>
   </div>
-  <div class="clearfix"></div>
+  <div class="clearfix"></div>-->
   <!--End Score Card--> 
 </div>
 <div class="col-md-5 scorecard pull-right">
