--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= yield :head %>
     <%= javascript_include_tag 'https://js.stripe.com/v1/' %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag 'bower_components/angular-pusher/angular-pusher.min.js' %>
   </head>
 
   <body class='<%=page_class%>' id='<%= page_id %>'>
