Entries/Lineups angular js bootstrap turbolinks fixes

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,4 +1,4 @@
-<div ng-app="fantasysport" ng-controller="ContestCtrl" ng-init="search()">
+<div ng-controller="ContestCtrl" ng-init="search()" class="ng-bootstrap-angular">
   <div class="welcomeNote">Enter the Game of your choice, then Select your Lineup and Win Cash.</div>
 
   <h2>MY CONTEST</h2>
