--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,4 +1,4 @@
-<div ng-app="fantasysport" ng-controller="GameCenterCtrl" ng-init="gc_init(<%= @entry_id %>)" class="capitalcontent gamecenter">
+<div ng-controller="GameCenterCtrl" ng-init="gc_init(<%= @entry_id %>)" class="capitalcontent gamecenter ng-bootstrap-angular">
 <!--Login Section-->
 
 <ul class="list-inline title">
